[tool.poetry]
name = "janus"
version = "0.1.0"
description = "Janus, an A/B Test Framework."
authors = ["Luan Fernandes <luangabriel70@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
tabulate = "^0.9.0"
bayesian-testing = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
notebook = "^7.2.1"
pre-commit = "^3.7.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
